# MultiscaleProject

./: .gitignore  README.md  colab_run.ipynb  pyproject.toml
artifacts/: case_study_hypertrophy.md  chromatin_toggle_manuscript.docx  chromatin_toggle_report.docx  importance_matrix.csv  label_protocol.md
data/: GSE21608.csv  annotations.yaml  cellxgene_contexts.csv  contexts.yaml  cross_pathway.csv  cross_pathway_small.csv  dataset_refs.yaml  erythroid_feedback_edges.tsv  erythroid_regulatory_edges.tsv  gene_coords.tsv  gene_coords_hg19.tsv  hysteresis_results.yaml  kg.yaml  literature_cases.yaml  marker_panel.yaml  real_data_template.csv  transitions.yaml
docs/: dataset_candidates_2026-07-07.md  framework_spec.md  multiome_data_plan.md  representation_roadmap.md  resistance_architecture.md  thesis_architecture.md
results/: structure_isolation_run1_arch-unconfirmed.txt
scripts/: atac_poc.py  attractor_diagnostic.py  batch_confound_check.py  bench_compile.py  build_gene_coords.py  build_manuscript.py  build_report.py  build_transitions.py  chromatin_potential.py  compare_archs.py  densify_erythroid_kg.py  diagnose_mechanisms.py  fig_structure_isolation.py  grn_dynamics.py  ingest_gse149451_myogenesis.py  ingest_gse156728_exhaustion.py  ingest_gse159843_endmt.py  ingest_gse184241_innate.py  ingest_gse194122_multiome.py  ingest_gse207308_shareseq.py  ingest_gse226365_adipogenesis.py  ingest_persample_mtx.py  ingest_replogle_perturbseq.py  landscape_viz.py  perturb_validate.py  profile_gpu.py  reingest_wide.sh  run.sh  run_postfix.sh  run_remaining.sh  shift_analysis.py  sweep_stepsepochs.py  train_multistable.py  trajectory_atac.py
wld/: README.md  build_wld_muscle_exercise_dataset.py  colab_build_train_wld_real.py  colab_compile_wld_real_priors.py  colab_export_wld_real_data.py  colab_rebuild_wld_from_scratch.py  colab_repair_omnipath_and_resume.py  colab_wld_v53_crispr_sciatac_ingest.py  colab_wld_v541_response_calibrated.py  colab_wld_v54_chromatin_response.py  colab_wld_v55_chromatin_twin.py  colab_wld_v56_nullaware.py  (+89 more)
(+36 files in other folders)
