[project]
name = "chromatin-toggle"
version = "0.1.0"
description = "Knowledge-graph GNN that predicts cell-state phenotype bias from an extrinsic cue plus intrinsic (chromatin/lineage) memory. Derived from the 'Synthetic Chromatin Toggle' literature review."
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2,<2.12",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Real single-cell backend (CZ CELLxGENE Discover Census). Heavier deps
# (tiledbsoma etc.); install only when you want expression-grounded contexts:
#   uv sync --extra census
census = [
    "cellxgene-census>=1.15",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    # steer the transitive stack to versions that support Python 3.12
    # (avoids an ancient numba/llvmlite being back-tracked in)
    "numba>=0.59",
    "scanpy>=1.10",
]

[project.scripts]
chromatin-train = "chromatin_toggle.train:main"
chromatin-predict = "chromatin_toggle.predict:main"
chromatin-census = "chromatin_toggle.census:main"
chromatin-geo = "chromatin_toggle.geo:main"
chromatin-scperturb = "chromatin_toggle.scperturb:main"
chromatin-combine = "chromatin_toggle.combine:main"
chromatin-eval = "chromatin_toggle.eval_lopo:main"
chromatin-dynamics = "chromatin_toggle.dynamics:main"
chromatin-annotate = "chromatin_toggle.annotate:main"
chromatin-interpret = "chromatin_toggle.interpret:main"
chromatin-classify = "chromatin_toggle.classify:main"
chromatin-scaling = "chromatin_toggle.scaling:main"
chromatin-figures = "chromatin_toggle.figures:main"
chromatin-cv = "chromatin_toggle.cv:main"
chromatin-baselines = "chromatin_toggle.baselines:main"
chromatin-ablate = "chromatin_toggle.ablate:main"
chromatin-perturb = "chromatin_toggle.perturb:main"
chromatin-realbench = "chromatin_toggle.realbench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chromatin_toggle"]
